  to another problem which manifested itself with double free. All similar code
  snippets in the Connector were fixed. (Andrey)

- The driver makes use of some Boost components (http://www.boost.org).
  You need to have Boost 1.34.0 or newer installed on your system in
  order to compile the driver from source. Binary distributions have no
  additional dependencies over 1.0.5.


GA  1.0.5 - 2009-04-20

- Changed the interface of sql::ConnectionMetaData, sql::ResultSetMetaData
  and sql::ParameterMetaData to have a protected destructor. In this way the
  client code doesn't need, and won't be able, to destruct the metadata
  objects returned by the connector. The connector will handle their
  destruction. This enables statements like :
  connection->getMetaData->getSchema();
  without the result of leaking memory because we lost the pointer returned
  by getMetaData(). (Lawrin, Andrey)

- Large overhaul of the code to improve the memory management to not leak in
  exceptional situations. Big improvement compared to Beta1. (Andrey)

- Fixed the interface of sql::Driver and sql::Connection so they accept the
  options map by alias instead of by value. (Andrey)

- Changed the return type of sql::SQLException::getSQLState() from
  std::string to const char * to be consistent with std::exception::what().
  (Andrey)

- Implemented getResultSetType() and setResultSetType() for Statement. Used
  are TYPE_FORWARD_ONLY, which means unbuffered result set and
  TYPE_SCROLL_INSENSITIVE, which means buffered result set. (Andrey)

- Implemented getResultSetType() for PreparedStatement. The setter is not
  implemented because currently PreparedStatement can't do refetching and
  storing the result means the bind buffers will be correct. (Andrey)

- Added "defaultStatementResultType" to MySQL_Connection::setClientOption() as
  an option. Also the method now returns `sql::Connection *`. (Andrey)

- Added Result::getType() and implemented it in the three result set classes.